// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Buttons Default 1`] = `
<button
  className="btn primary"
>
  Comenzar
</button>
`;

exports[`Storyshots Atoms/Buttons Types 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "display": "flex",
      "gap": "2rem",
    }
  }
>
  <button
    className="btn primary"
  >
    Comenzar
  </button>
  <button
    className="btn secondary"
  >
    Comenzar
  </button>
  <button
    className="btn tertiary"
  >
    Comenzar
  </button>
  <button
    className="btn outline-primary"
  >
    Comenzar
  </button>
  <button
    className="btn outline-muted"
  >
    Comenzar
  </button>
</div>
`;

exports[`Storyshots Atoms/Icon Default 1`] = `
<div
  className="icon"
>
  <svg
    className="color-base"
    style={
      Object {
        "height": 35,
        "width": 35,
      }
    }
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <desc>
      caretDown
    </desc>
    <path
      d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Links Default 1`] = `
<a
  className="link"
>
  Link
</a>
`;

exports[`Storyshots Atoms/Links Sign Up 1`] = `
<a
  className="link"
>
  Iniciar sesion
</a>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<p
  className="paragraph size-md color-base weight-normal"
>
  Hello World
</p>
`;

exports[`Storyshots Atoms/Paragraph Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "display": "flex",
      "gap": "2rem",
    }
  }
>
  <p
    className="paragraph size-sm color-base weight-normal"
  >
    Hello World
  </p>
  <p
    className="paragraph size-md color-base weight-normal"
  >
    Hello World
  </p>
  <p
    className="paragraph size-lg color-base weight-normal"
  >
    Hello World
  </p>
</div>
`;

exports[`Storyshots Atoms/Picture Default 1`] = `
<picture
  className="picture"
>
  <img
    src="https://picsum.photos/id/1033/400/400"
    style={
      Object {
        "height": "auto",
        "maxWidth": 200,
      }
    }
  />
</picture>
`;
